--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         <input type="radio" id="visa" name="payment-method" value="visa" required>
         <label for="visa">Visa</label><br>
 
-
+	<input type="radio" id="mastercard" name="payment-method" value="mastercard">
+	<label for="mastercard">Mastercard</label><br>
 
         <input type="submit" value="Submit">
       </form>
