--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 	<input type="radio" id="mastercard" name="payment-method" value="mastercard">
 	<label for="mastercard">Mastercard</label><br>
 
+	<input type="radio" id="amex" name="payment-method" value="amex">
+	<label for="amex">American Express</label><br>
+
         <input type="submit" value="Submit">
       </form>
       <div class="error"></div>
