Update Bitcoin Option for Payments

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
 	<input type="radio" id="amex" name="payment-method" value="amex">
 	<label for="amex">American Express</label><br>
+	
+	<input type="radio" id="bitcoin" name="payment-method" value="bitcoin">
+	<label for="bitcoin">Bitcoin</label><br>
 
         <input type="submit" value="Submit">
       </form>
