Update Cash Option for Payments

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 	
 	<input type="radio" id="bitcoin" name="payment-method" value="bitcoin">
 	<label for="bitcoin">Bitcoin</label><br>
+	
+	<input type="radio" id="cash" name="payment-method" value="cash">
+	<label for="cash">Cash</label><br>
 
         <input type="submit" value="Submit">
       </form>
